build files from kotlin -> groovy

--- a/buildSrc/src/main/groovy/au.com.helixta.java-application-conventions.gradle
+++ b/buildSrc/src/main/groovy/au.com.helixta.java-application-conventions.gradle
@@ -4,8 +4,8 @@
 
 plugins {
     // Apply the common convention plugin for shared build configuration between library and application projects.
-    id("au.com.helixta.java-common-conventions")
+    id 'au.com.helixta.java-common-conventions'
 
     // Apply the application plugin to add support for building a CLI application in Java.
-    application
+    id 'application'
 }
