--- a/buildSrc/src/main/groovy/au.com.helixta.java-library-conventions.gradle
+++ b/buildSrc/src/main/groovy/au.com.helixta.java-library-conventions.gradle
@@ -4,8 +4,8 @@
 
 plugins {
     // Apply the common convention plugin for shared build configuration between library and application projects.
-    id("au.com.helixta.java-common-conventions")
+    id 'au.com.helixta.java-common-conventions'
 
     // Apply the java-library plugin for API and implementation separation.
-    `java-library`
+    id 'java-library'
 }
