--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/7.3.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = "helix-collective"
-include("app", "list", "utilities")
+rootProject.name = 'helix-java-packages'
+include('app', 'list', 'utilities')
